@@ -1,3 +1,4 @@
+- vipsthumbnail needs an auto-rotate flag
 
 - think of a better way to support skipahead
 
